2021-12-03  Jordan Yelloz  <jordan@yelloz.me>

	* libpoke/std.pk (atoi): Added code that extracts any single leading '+'
	or '-', decides a polarity of the number to parse, and shifts over the
	input string by 1 character if necessary before parsing the digits.
	* testsuite/poke.std/std-test.pk: Added tests for new behaviors.

2021-12-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poke/pk-cmd.c (pk_cmd_exec_1): Update `cmd_name` after finding
	the sub-command.
	* testsuite/poke.cmd/set-obase-6.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2021-12-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poke/pk-cmd.c (pk_cmd_exec_1): Introduce a new predicate
	`run_default_handler_p`. Now if user calls commands (which has
	sub-commands) with no arguments, it'll try to call the top-level
	handler (if there's one) instead of showing the usage string.
	If there's no top-level handler, the usage string will be shown.
	* poke/pk-cmd-set.c (pk_cmd_set_dump): New function to dump all
	settings.
	(set_cmd): Use `pk_cmd_set_dump`, and remove usage string.
	* poke/pk-settings.pk (pk_settings_dump): New helper function.
	* doc/poke.texi (set command): Update.

2021-12-02  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Bump poke version to 1.4.
	* NEWS: Add entries for 1.4.

2021-12-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans2_ps_incrdecr): Substitute an
	assert with an ICE.

2021-12-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_format): Fix assertion.

2021-12-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-rt-1.pk (_pkl_escape_string): Add special cases for
	tab (\t), new-line ('\n'), double-quote ('"') and backslash ('\\').
	* testsuite/poke.pkl/format-30.pk: New test.
	* testsuite/poke.pkl/format-31.pk: Likewise.
	* testsuite/poke.pkl/format-32.pk: Likewise.
	* testsuite/poke.pkl/format-33.pk: Likewise.
	* testsuite/poke.pkl/format-34.pk: Likewise.