@@ -1,3 +1,12 @@
+2021-12-04  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/libpoke.h (pk_map_decl_fn): Add new param (`pk_val value`).
+	* libpoke/libpoke.c (my_decl_map_fn): Lookup var name in runtime env.
+	(pk_decl_map): Pass runtime env to the callback.
+	* poke/pk-cmd-def.c (print_var_decl): Add new param.
+	(print_fun_decl): Likewise.
+	(print_type_decl): Likewise.
+
 2021-12-03  Jordan Yelloz  <jordan@yelloz.me>
 
 	* libpoke/std.pk (atoi): Added code that extracts any single leading '+'
